--- a/index.html
+++ b/index.html
@@ -8,93 +8,111 @@
    <title> Студия </title>
    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-   <header>
-      <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-      <nav>
-         <ul class="site-nav list">
-            <li> <a href="./index.html" class="link current">Студия</a></li>
-            <li> <a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li> <a href="" class="link">Контакты</a></li>
-         </ul>
-      </nav>
+   <header class="page-header">
+      <div class="container">
+         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+         <nav>
+            <ul class="site-nav list">
+               <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
+               <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
+               <li class="item"> <a href="" class="link">Контакты</a></li>
+            </ul>
+         </nav>
          <ul class="auth-nav list">
             <li><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
             <li><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
          </ul>
+      </div>
    </header>
    <main>
       <section class="hero">
-         <h1 class="hero-title">Эффективные решения для вашего бизнеса </h1>
-         <button type="button" class="primary-button"> Заказать услугу </button>
+         <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса </h1>
+         <button type="button" class="primary-button">Заказать услугу</button>
       </section>
       <section class="features">
-         <h2>Особенности</h2>
-         <ul class="feature-list list">
-            <li>
-               <h3 class="features-title"> Внимание к деталям</h3>
-               <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
-            </li>
-            <li>
-               <h3 class="features-title"> Пунктуальность</h3>
-               <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
-            </li>
-            <li>
-               <h3 class="features-title"> Планирование</h3>
-               <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает. </p>
-            </li>
-            <li>
-               <h3 class="features-title"> Современные технологии </h3>
-               <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
-            </li>
-         </ul>
+         <div class="container">
+            <h2 class="features-title">Особенности</h2>
+            <ul class="feature-list list">
+               <li>
+                  <h3 class="features-title"> Внимание к деталям</h3>
+                  <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
+               </li>
+               <li>
+                  <h3 class="features-title"> Пунктуальность</h3>
+                  <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                  </p>
+               </li>
+               <li>
+                  <h3 class="features-title"> Планирование</h3>
+                  <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.
+                  </p>
+               </li>
+               <li>
+                  <h3 class="features-title"> Современные технологии </h3>
+                  <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
+               </li>
+            </ul>
+         </div>
       </section>
       <section class="section">
-         <h2 class="section-title"> Чем мы занимаемся </h2>
-         <ul class="list">
-         <li><img src="./images/keyboard.jpg" alt="Клавиатура" width="370"></li>
-         <li><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
-         <li><img src="./images/laptop.jpg" alt="Планшет" width="370"></li>
-      </ul> 
+         <div class="container">
+            <h2 class="section-title"> Чем мы занимаемся </h2>
+            <ul class="list">
+               <li><img src="./images/keyboard.jpg" alt="Клавиатура" width="370"></li>
+               <li><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
+               <li><img src="./images/laptop.jpg" alt="Планшет" width="370"></li>
+            </ul>
+         </div>
       </section>
       <section class="section-team">
-         <h2 class="section-title"> Наша команда </h2>
-         <ul class="team-list list">
-            <li>
-               <img src="./images/product_des.jpg" alt="Продакт дизайнер" width="270">
-               <h3 class="title"> Игорь Демьяненко </h3>
-               <p class="text">Product Designer </p>
-            </li>
-            <li>
-               <img src="./images/frontend_dev.jpg" alt="Фронтенд разработчик" width="270">
-               <h3 class="title"> Ольга Репина </h3>
-               <p class="text">Frontend Developer </p>
-            </li>
-            <li><img src="./images/marketing.jpg" alt="Маркетинг" width="270">
-               <h3 class="title"> Николай Тарасов </h3>
-               <p class="text">Marketing </p>
-            </li>
-            <li><img src="./images/ui_des.jpg" alt="Юай дизайнер" width="270">
-               <h3 class="title"> Михаил Ермаков </h3>
-               <p class="text">UI Designer </p>
-            </li>
-         </ul>
+         <div class="container">
+            <h2 class="section-title"> Наша команда </h2>
+            <ul class="team-list list">
+               <li class="item">
+                  <img src="./images/product_des.jpg" alt="Продакт дизайнер" width="270">
+                  <h3 class="title"> Игорь Демьяненко </h3>
+                  <p class="text">Product Designer </p>
+               </li>
+               <li class="item">
+                  <img src="./images/frontend_dev.jpg" alt="Фронтенд разработчик" width="270">
+                  <h3 class="title"> Ольга Репина </h3>
+                  <p class="text">Frontend Developer </p>
+               </li>
+               <li class="item"><img src="./images/marketing.jpg" alt="Маркетинг" width="270">
+                  <h3 class="title"> Николай Тарасов </h3>
+                  <p class="text">Marketing </p>
+               </li>
+               <li class="item"><img src="./images/ui_des.jpg" alt="Юай дизайнер" width="270">
+                  <h3 class="title"> Михаил Ермаков </h3>
+                  <p class="text">UI Designer </p>
+               </li>
+            </ul>
+         </div>
       </section>
    </main>
-   <footer class="footer">
-      <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-      <address>
-         <ul class="address list">
-            <li><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank" rel="noopener noreferrer" class="link location">
-               г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
-            <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
-         </ul>
-      </address>
-   </footer>
+  
+      <footer class="footer">
+         <div class="container">
+         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+         <address>
+            <ul class="address list">
+               <li><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank" rel="noopener noreferrer"
+                     class="link location">
+                     г. Киев, пр-т Леси Украинки, 26</a></li>
+               <li><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
+               <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
+            </ul>
+         </address>
+         </div>
+      </footer>
+   
 </body>
 
 </html>
