--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
 <body>
    <header class="page-header">
-      <div class="container">
-         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-         <nav>
-            <ul class="site-nav list">
-               <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
-               <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
-               <li class="item"> <a href="" class="link">Контакты</a></li>
+      <div class="container main-header">
+            <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+            <nav>
+               <ul class="site-nav list">
+                  <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
+                  <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
+                  <li class="item"> <a href="" class="link">Контакты</a></li>
+               </ul>
+            </nav>
+            <ul class="auth-nav list">
+               <li class="item"><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
+               <li class="item"><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
             </ul>
-         </nav>
-         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
-            <li><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
-         </ul>
       </div>
    </header>
    <main>
@@ -40,21 +40,20 @@
          <div class="container">
             <h2 class="features-title">Особенности</h2>
             <ul class="feature-list list">
-               <li>
+               <li class="item">
                   <h3 class="features-title"> Внимание к деталям</h3>
                   <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
                </li>
-               <li>
+               <li class="item">
                   <h3 class="features-title"> Пунктуальность</h3>
-                  <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                  </p>
+                  <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                </li>
-               <li>
+               <li class="item">
                   <h3 class="features-title"> Планирование</h3>
                   <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.
                   </p>
                </li>
-               <li>
+               <li class="item">
                   <h3 class="features-title"> Современные технологии </h3>
                   <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
                </li>
@@ -64,10 +63,10 @@
       <section class="section">
          <div class="container">
             <h2 class="section-title"> Чем мы занимаемся </h2>
-            <ul class="list">
-               <li><img src="./images/keyboard.jpg" alt="Клавиатура" width="370"></li>
-               <li><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
-               <li><img src="./images/laptop.jpg" alt="Планшет" width="370"></li>
+            <ul class="about-us list">
+               <li class="item"><img src="./images/keyboard.jpg" alt="Клавиатура" width="370"></li>
+               <li class="item"><img src="./images/notebook.jpg" alt="Ноутбук" width="370"></li>
+               <li class="item"><img src="./images/laptop.jpg" alt="Планшет" width="370"></li>
             </ul>
          </div>
       </section>
