--- a/portfolio.html
+++ b/portfolio.html
@@ -10,114 +10,139 @@
       rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"/>
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-   <header>
-      <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-      <nav>
-         <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+   <header class="page-header">
+      <div class="container main-header">
+         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+         <nav>
+            <ul class="site-nav list">
+               <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
+               <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
+               <li class="item"> <a href="" class="link">Контакты</a></li>
+            </ul>
+         </nav>
+         <ul class="auth-nav list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
+            <li class="item"><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
          </ul>
-      </nav>
-      <ul class="auth-nav list">
-         <li><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
-         <li><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
-      </ul>
+      </div>
    </header>
 
    <main>
-      <section>
-         <h1>Портфолио</h1>
-         <ul class="list">
-            <li><button type="button" class="button active">Все </button></li>
-            <li><button type="button" class="button">Веб-сайты </button></li>
-            <li><button type="button" class="button">Приложения </button></li>
-            <li><button type="button" class="button">Дизайн </button></li>
-            <li><button type="button" class="button">Маркетинг </button></li>
-         </ul>
-         <ul class="list page">
-            <li>
-               <a href="" class="link">
-                  <img src="./images/website.jpg" alt="Технокряк" width="370">
-                  <h3 class="features-title"> Технокряк</h3>
-                  <p>Веб-сайт</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                  <h3 class="features-title"> Постер New Orlean vs Golden Star </h3>
-                  <p>Frontend Developer </p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
-                  <h3 class="features-title"> Ресторан Seafood </h3>
-                  <p>Приложение</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/prime.jpg" alt="Проект Prime" width="370">
-                  <h3 class="features-title"> Проект Prime </h3>
-                  <p>Маркетинг</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
-                  <h3 class="features-title"> Проект Boxes </h3>
-                  <p>Приложение </p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/monitor.jpg" alt="Inspiration has no Borders" width="370">
-                  <h3 class="features-title"> Inspiration has no Borders </h3>
-                  <p>Веб-сайт</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/edition.jpg" alt="Издание Limited Edition" width="370">
-                  <h3 class="features-title"> Издание Limited Edition </h3>
-                  <p>Дизайн</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/lab.jpg" alt="Проект LAB" width="370">
-                  <h3 class="features-title">Проект LAB</h3>
-                  <p>Маркетинг</p>
-               </a>
-            </li>
-            <li>
-               <a href="" class="link">
-                  <img src="./images/growing.jpg" alt="Growing Business" width="370">
-                  <h3 class="features-title">Growing Business</h3>
-                  <p>Приложение</p>
-               </a>
-            </li>
-         </ul>
+      <section class="portfolio">
+         <div class="container">
+            <h1 class="features-title">Портфолио</h1>
+            <ul class="btn-list list">
+               <li class="item"><button type="button" class="button active">Все </button></li>
+               <li class="item"><button type="button" class="button">Веб-сайты </button></li>
+               <li class="item"><button type="button" class="button">Приложения </button></li>
+               <li class="item"><button type="button" class="button">Дизайн </button></li>
+               <li class="item"><button type="button" class="button">Маркетинг </button></li>
+            </ul>
+            <ul class="list page">
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/website.jpg" alt="Технокряк" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Технокряк</h3>
+                        <p>Веб-сайт</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Постер New Orlean vs Golden Star </h3>
+                        <p>Frontend Developer </p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Ресторан Seafood </h3>
+                        <p>Приложение</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/prime.jpg" alt="Проект Prime" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Проект Prime </h3>
+                        <p>Маркетинг</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Проект Boxes </h3>
+                        <p>Приложение </p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/monitor.jpg" alt="Inspiration has no Borders" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Inspiration has no Borders </h3>
+                        <p>Веб-сайт</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/edition.jpg" alt="Издание Limited Edition" width="370">
+                     <div class="content">
+                        <h3 class="features-title"> Издание Limited Edition </h3>
+                        <p>Дизайн</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/lab.jpg" alt="Проект LAB" width="370">
+                     <div class="content">
+                        <h3 class="features-title">Проект LAB</h3>
+                        <p>Маркетинг</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="item">
+                  <a href="" class="link">
+                     <img src="./images/growing.jpg" alt="Growing Business" width="370">
+                     <div class="content">
+                        <h3 class="features-title">Growing Business</h3>
+                        <p>Приложение</p>
+                     </div>
+                  </a>
+               </li>
+            </ul>
+         </div>
       </section>
+
    </main>
    <footer class="footer">
-      <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-      <address>
-         <ul class="address list">
-            <li><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank" rel="noopener noreferrer"
-                  class="link location">
-                  г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
-            <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
-         </ul>
-      </address>
+      <div class="container">
+         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+         <address>
+            <ul class="address list">
+               <li><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank" rel="noopener noreferrer"
+                     class="link location">
+                     г. Киев, пр-т Леси Украинки, 26</a></li>
+               <li><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
+               <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
+            </ul>
+         </address>
+      </div>
    </footer>
 </body>
 
