--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
 <body>
    <header class="page-header">
       <div class="container main-header">
-            <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-            <nav>
-               <ul class="site-nav list">
-                  <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
-                  <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
-                  <li class="item"> <a href="" class="link">Контакты</a></li>
-               </ul>
-            </nav>
-            <ul class="auth-nav list">
-               <li class="item"><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
-               <li class="item"><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
+         <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+         <nav class="row">
+            <ul class="site-nav list">
+               <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+               <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+               <li class="item"><a href="" class="link">Контакты</a></li>
             </ul>
+         </nav>
+         <ul class="auth-nav list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
+            <li class="item"><a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a></li>
+         </ul>
       </div>
    </header>
    <main>
-      <section class="hero">
+
+      <section class="hero section">
          <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса </h1>
          <button type="button" class="primary-button">Заказать услугу</button>
       </section>
-      <section class="features">
+
+      <section class="features section">
          <div class="container">
-            <h2 class="features-title">Особенности</h2>
+            <h2 class="features-title hidden">Особенности</h2>
             <ul class="feature-list list">
                <li class="item">
                   <h3 class="features-title"> Внимание к деталям</h3>
@@ -46,7 +48,8 @@
                </li>
                <li class="item">
                   <h3 class="features-title"> Пунктуальность</h3>
-                  <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                  <p class="text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                  </p>
                </li>
                <li class="item">
                   <h3 class="features-title"> Планирование</h3>
@@ -60,7 +63,8 @@
             </ul>
          </div>
       </section>
-      <section class="section">
+
+      <section class="section about">
          <div class="container">
             <h2 class="section-title"> Чем мы занимаемся </h2>
             <ul class="about-us list">
@@ -70,35 +74,44 @@
             </ul>
          </div>
       </section>
-      <section class="section-team">
+
+      <section class="section-team section">
          <div class="container">
             <h2 class="section-title"> Наша команда </h2>
             <ul class="team-list list">
                <li class="item">
                   <img src="./images/product_des.jpg" alt="Продакт дизайнер" width="270">
-                  <h3 class="title"> Игорь Демьяненко </h3>
-                  <p class="text">Product Designer </p>
+                  <div class="box">
+                     <h3 class="title"> Игорь Демьяненко </h3>
+                     <p class="text">Product Designer </p>
+                  </div>
                </li>
                <li class="item">
                   <img src="./images/frontend_dev.jpg" alt="Фронтенд разработчик" width="270">
-                  <h3 class="title"> Ольга Репина </h3>
-                  <p class="text">Frontend Developer </p>
+                  <div class="box">
+                     <h3 class="title"> Ольга Репина </h3>
+                     <p class="text">Frontend Developer </p>
+                  </div>
                </li>
                <li class="item"><img src="./images/marketing.jpg" alt="Маркетинг" width="270">
-                  <h3 class="title"> Николай Тарасов </h3>
-                  <p class="text">Marketing </p>
+                  <div class="box">
+                     <h3 class="title"> Николай Тарасов </h3>
+                     <p class="text">Marketing </p>
+                  </div>
                </li>
                <li class="item"><img src="./images/ui_des.jpg" alt="Юай дизайнер" width="270">
-                  <h3 class="title"> Михаил Ермаков </h3>
-                  <p class="text">UI Designer </p>
+                  <div class="box">
+                     <h3 class="title"> Михаил Ермаков </h3>
+                     <p class="text">UI Designer </p>
+                  </div>
                </li>
             </ul>
          </div>
       </section>
    </main>
-  
-      <footer class="footer">
-         <div class="container">
+
+   <footer class="footer">
+      <div class="container main-footer">
          <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
          <address>
             <ul class="address list">
@@ -109,9 +122,9 @@
                <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
             </ul>
          </address>
-         </div>
-      </footer>
-   
+      </div>
+   </footer>
+
 </body>
 
 </html>
