--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
    <header class="page-header">
       <div class="container main-header">
          <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
-         <nav>
+         <nav class="row">
             <ul class="site-nav list">
-               <li class="item"> <a href="./index.html" class="link current">Студия</a></li>
-               <li class="item"> <a href="./portfolio.html" class="link">Портфолио</a></li>
+               <li class="item"> <a href="./index.html" class="link">Студия</a></li>
+               <li class="item"> <a href="./portfolio.html" class="link current">Портфолио</a></li>
                <li class="item"> <a href="" class="link">Контакты</a></li>
             </ul>
          </nav>
@@ -33,9 +33,9 @@
    </header>
 
    <main>
-      <section class="portfolio">
+      <section class="portfolio section">
          <div class="container">
-            <h1 class="features-title">Портфолио</h1>
+            <h1 class="features-title hidden">Портфолио</h1>
             <ul class="btn-list list">
                <li class="item"><button type="button" class="button active">Все </button></li>
                <li class="item"><button type="button" class="button">Веб-сайты </button></li>
@@ -131,7 +131,7 @@
 
    </main>
    <footer class="footer">
-      <div class="container">
+      <div class="container main-footer">
          <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
          <address>
             <ul class="address list">
