--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <section class="features section">
          <div class="container">
-            <h2 class="features-title hidden">Особенности</h2>
+            <h2 class="features-title visually-hidden">Особенности</h2>
             <ul class="feature-list list">
                <li class="item">
                   <h3 class="features-title"> Внимание к деталям</h3>
