--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
    <main>
       <section class="portfolio section">
          <div class="container">
-            <h1 class="features-title hidden">Портфолио</h1>
+            <h1 class="features-title visually-hidden">Портфолио</h1>
             <ul class="btn-list list">
                <li class="item"><button type="button" class="button active">Все </button></li>
                <li class="item"><button type="button" class="button">Веб-сайты </button></li>
