--- a/portfolio.html
+++ b/portfolio.html
@@ -135,10 +135,10 @@
          <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
          <address>
             <ul class="address list">
-               <li><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank" rel="noopener noreferrer"
-                     class="link location">
+               <li class="item-location"><a href="https://goo.gl/maps/NAT9T7fErA63x4ow5" target="_blank"
+                     rel="noopener noreferrer" class="link location">
                      г. Киев, пр-т Леси Украинки, 26</a></li>
-               <li><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
+               <li class="item-contact"><a href="mailto:info@devstudio.com" class="contacts link">info@example.com</a></li>
                <li><a href="tel:+380961111111" class="telephone link"> +38 099 111 11 11</a></li>
             </ul>
          </address>
